Add multithread tracing and harden source handling (3.2.0) (#7)
* Add multithread tracing and bump version to 3.2.0

* Make source parsing linear and require prepared batch guests

* Handle quoted guest paths and cyclic trace references safely

* Document CodeQL fixes and reviewed alert dispositions

* Preserve snapshot thread metadata and enforce multithread source isolation

Co-authored-by: mepcotterell <49024+mepcotterell@users.noreply.github.com>

* Bound nesting and replace recursive trace traversals

* Synchronize stream accounting tests at session boundaries

Quiet-period polling may return before the reader consumes pending bytes, causing the next session to account them against its own limit. Gate the reader to reproduce the delayed schedule, wait for explicit byte totals before switching sessions, and verify retained bytes and output_limit without weakening assertions.

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: mepcotterell <49024+mepcotterell@users.noreply.github.com>